# pilot-hdc-workspace

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: hdc-pipeline.yml
app/: api_registry.py  config.py  logger.py  main.py
app/commons/auth_service/: __init__.py
app/commons/guacamole_client/: __init__.py
app/models/: base.py  models_connection.py  models_permission.py
app/routers/: api_root.py
app/routers/api_guacamole/: api_connection.py  api_permission.py  utils.py
app/routers/api_health/: api_health.py
tests/: conftest.py
tests/app/routers/api_guacamole/: test_api_connection.py  test_api_permission.py
