[tool.poetry]
name = "workspace"
version = "2.2.7"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "0.88.0"
httpx = "^0.23.0"
pilot-platform-common = "0.3.0"
uvicorn = "^0.18.3"
fastapi-utils = "^0.2.1"
psycopg2 = "^2.9.3"
guacapy = "^0.11.0"
frozenlist = "1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-env= "0.6.2"
testcontainers = "^3.6.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
pytest-httpx = "0.21.0"

[tool.pytest.ini_options]
testpaths = "tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
